[gd_scene load_steps=7 format=3 uid="uid://b15jb5b3sd68l"]

[ext_resource type="Script" uid="uid://dlqtqdb3ti3qv" path="res://scenes/enemies/drone/drone.gd" id="1_ws74u"]
[ext_resource type="Texture2D" uid="uid://cekls74f6e8qo" path="res://resources/graphics/enemies/drone.png" id="2_361hk"]
[ext_resource type="Shader" uid="uid://cpk2e31vwbj30" path="res://resources/shaders/white.gdshader" id="2_h86h0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_22it8"]
radius = 70.0

[sub_resource type="CircleShape2D" id="CircleShape2D_h86h0"]
radius = 1007.45

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wswgn"]
shader = ExtResource("2_h86h0")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/amount = 0.0

[node name="Drone" type="CharacterBody2D" groups=["Entity"]]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_ws74u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_22it8")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_h86h0")
debug_color = Color(0.997523, 0, 0.164065, 0.42)

[node name="DroneImg" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_wswgn")
rotation = 1.5708
texture = ExtResource("2_361hk")

[node name="DamageCooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="DamageCooldown" to="." method="_on_damage_cooldown_timeout"]
